@@ -1,5 +1,10 @@
 2007-02-06  Dalibor Topic  <robilad@kaffe.org>
 
+        * compress.h
+        Added #ifndef __FASTJAR_COMPRESS_H__.
+
+2007-02-06  Dalibor Topic  <robilad@kaffe.org>
+
 	* dostime.c (unix2dostime): Renamed parameter to
 	unix_time.
 
